# ostree-container

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/examples/: test_e2e.rs
lib/src/: build.rs  buildoci.rs  client.rs  import.rs  lib.rs  main.rs  oci.rs  variant_utils.rs
lib/tests/it/: main.rs
src/: build.rs  main.rs
