[package]
name = "ostree-container"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgwalters/ostree-container"
readme = "README.md"

[dependencies]
cjson = "0.1.1"
flate2 = "1.0.20"
gio = "0.9.1"
glib = "0.10.3"
hex = "0.4.3"
openat = "0.1.20"
openat-ext = "0.1.13"
openssl = "0.10.33"
ostree = { version = "0.9.1", features = ["v2020_4"] }
ostree-sys = "0.7.1"
phf = { version = "0.8.0", features = ["macros"] }
serde = "1.0.125"
serde_json = "1.0.64"
tar = "0.4.33"
anyhow = "1.0"
fn-error-context = "0.1.1"

[dev-dependencies]
tempfile = "3.2.0"

